force-app/main/default/objects/Packaging_Agreement__c/Packaging_Agreement__c.object-meta.xml
<CustomObject>
    <description>Vidrala Fifty Spain Object From Org Migration 2021
&quot;Objetivo que agrupa los convenios de embalaje de los materiales de los clientes&quot;</description>
    <label>Packaging Agreement</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Packaging Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packaging Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>