force-app/main/default/objects/Packaging_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Detail</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Packaging Agreements</relationshipLabel>
    <relationshipName>Packaging_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>