force-app/main/default/objects/Packaging_Agreement__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abono buenos y a reparar</fullName>
            </value>
            <value>
                <fullName>Abono buenos y a reparar Italia</fullName>
            </value>
            <value>
                <fullName>Abono todos</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>Gratuito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>