force-app/main/default/objects/Packaging_Agreement__c/fields/Agreement_Code__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Code__c</fullName>
    <externalId>true</externalId>
    <label>Agreement Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>