force-app/main/default/objects/Packaging_Agreement__c/fields/Credit_Price__c.field-meta.xml
<CustomField>
    <fullName>Credit_Price__c</fullName>
    <label>Credit Price</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>