force-app/main/default/objects/Packaging_Agreement__c/fields/Debit_Price__c.field-meta.xml
<CustomField>
    <fullName>Debit_Price__c</fullName>
    <label>Debit Price</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>