force-app/main/default/objects/Packaging_Agreement__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>From Vidrala Spain Picklist</description>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8001378 PALETA ANIFE RETORNABLE 1200X1000X155</fullName>
                <default>true</default>
                <label>PALETA ANIFE RETORNABLE 1200X1000X155</label>
            </value>
            <value>
                <fullName>8001392 PALETA VMF RETORNABLE 1200X1000X154</fullName>
                <label>PALETA VMF RETORNABLE 1200X1000X154</label>
            </value>
            <value>
                <fullName>8000355 PLANCHA PP CARTONPLAST PCA 1200X1000 ALV</fullName>
                <label>PLANCHA PP CARTONPLAST PCA 1200X1000 ALV</label>
            </value>
            <value>
                <fullName>8000385 PLANCHA PP VIDRALA PVE EXPORT 1200X1000</fullName>
                <label>PLANCHA PP VIDRALA PVE EXPORT 1200X1000</label>
            </value>
            <value>
                <fullName>8000042 PALETA RG01 RETORNAB. ALIG 1200X1000X125</fullName>
                <label>PALETA RG01 RETORNAB. ALIG 1200X1000X125</label>
            </value>
            <value>
                <fullName>8003618 PLACA PP SMARTPAD 1200X1000 2,6 -3mm PSM</fullName>
                <label>PLACA PP SMARTPAD 1200X1000 2,6 -3mm PSM</label>
            </value>
            <value>
                <fullName>8003625 Top Frame - 25 mm</fullName>
                <label>TOP FRAME - 25 mm</label>
            </value>
            <value>
                <fullName>8003835 PALETES HK RETORNABLE 1200X1000X162</fullName>
                <label>PALETES HK RETORNABLE 1200X1000X162</label>
            </value>
            <value>
                <fullName>8002589 PALETA TF RETORNABLE 1200X1000X145</fullName>
                <label>PALETA TF RETORNABLE  1200X1000X145</label>
            </value>
            <value>
                <fullName>8002626 PALETA DIN (T5) RETORNABLE 1200X1000X134</fullName>
                <label>PALETA DIN (T5) RETORNABLE 1200X1000X134</label>
            </value>
            <value>
                <fullName>8002627 PALETA EURO RETORNABLE 1200X 800X144</fullName>
                <label>PALETA EURO RETORNABLE     1200X 800X144</label>
            </value>
            <value>
                <fullName>8002628 PALETA UK 1200X1000X150</fullName>
                <label>PALETA UK 1200X1000X150</label>
            </value>
            <value>
                <fullName>8000350 PLACA 1200X1000 PP VIDRALA AKY 3.5mm PVE</fullName>
                <label>PLACA 1200X1000 PP VIDRALA AKY 3.5mm PVE</label>
            </value>
            <value>
                <fullName>8000360 PLACA 1200X1000 PP CPL 3mm SANDWICH PCS</fullName>
                <label>PLACA 1200X1000 PP CPL 3mm SANDWICH PCS</label>
            </value>
            <value>
                <fullName>8000397 PLACA 1200X1000 PP CPL 3mm SDW TROQ PCST</fullName>
                <label>PLACA 1200X1000 PP CPL 3mm SDW TROQ PCST</label>
            </value>
            <value>
                <fullName>8003021 PALETA EQ ENCIRC RET 1200X1000X157</fullName>
                <label>PALETA EQ ENCIRC RET 1200X1000X157</label>
            </value>
            <value>
                <fullName>8002598 INTERFAL.PVI ALVEOL 1200X1000X3.4 VERDE</fullName>
                <label>INTERFAL.PVI ALVEOL 1200X1000X3.4 VERDE</label>
            </value>
            <value>
                <fullName>8003836 TAPA PP MACIZA SMARTCAP 1200X1000 TSM</fullName>
                <label>TAPA PP MACIZA SMARTCAP 1200X1000 TSM</label>
            </value>
            <value>
                <fullName>8002517 PALETA DE MADERA CHEP RECUPERABLE</fullName>
                <label>PALETA DE MADERA CHEP RECUPERABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>