force-app/main/default/objects/Packaging_Agreement__c/fields/Portes_Devolucion__c.field-meta.xml
<CustomField>
    <fullName>Portes_Devolucion__c</fullName>
    <label>Portes Devolución</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portes Cliente</fullName>
                <default>true</default>
                <label>Portes Cliente</label>
            </value>
            <value>
                <fullName>Portes Vidrala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>