force-app/main/default/objects/Packaging_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Agreement__c</columns>
    <columns>Material__c</columns>
    <columns>Portes_Devolucion__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>